# sputnikvm-dev-web

./: .gitignore  Makefile  README.md  default.nix  package.json  stack.yaml  svmdev-web.cabal
app/: Debug.hs  Main.hs
app/Debug/: Step.hs  Trace.hs
scss/: _base.scss  _inputs.scss  _layouts.scss  _paper.scss  _type.scss  _variables.scss  style.scss
static/fonts/rosario/: stylesheet.css
