name:                svmdev-web
version:             0.1.0.0
synopsis:            Debugger web interface.
description:         Web interface for svmdev.
homepage:            http://github.com/ethereumproject/sputnikvm-dev-web
license:             Apache-2.0
license-file:        LICENSE
author:              Wei Tang
maintainer:          hi@that.world
category:            Other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable svmdev-web
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , reflex
                     , reflex-dom
                     , containers
                     , text
                     , aeson
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ethereumproject/sputnikvm-dev-web
